metadata-retriever/metadata/objects/Fleet_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_GST_Inc__c</fullName>
        <label>Amount (GST Inc.)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cost_Date__c</fullName>
        <label>Cost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Ref_Number__c</fullName>
        <label>Customer Ref Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Vehicle_Relationship_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Vehicle Relationship-Driver</label>
        <referenceTo>Customer_Vehicle_Relationship__c</referenceTo>
        <relationshipLabel>Fleet Transactions</relationshipLabel>
        <relationshipName>Fleet_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <label>Fleet</label>
        <referenceTo>Fleet__c</referenceTo>
        <relationshipLabel>Fleet Transactions</relationshipLabel>
        <relationshipName>Fleet_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <label>GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>BIO DIESEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIESEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIESEL B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF ROAD DIESEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROL E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROL P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>7 Eleven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caltex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomFleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gull Fuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorpass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other / Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Petroleum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity_Litre__c</fullName>
        <label>Quantity (Litre)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transsaction_Fee__c</fullName>
        <label>Transsaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trips__c</fullName>
        <label>Trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price_GST_Inc__c</fullName>
        <label>Unit Price (GST Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fleet Transaction</label>
    <nameField>
        <displayFormat>Fleet-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fleet Transactions</pluralLabel>
    <recordTypes>
        <fullName>Fuel_Card</fullName>
        <active>true</active>
        <label>Fuel Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toll_Card</fullName>
        <active>true</active>
        <label>Toll Card</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>